crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_retry_config_constant.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: config
---
strategy: constant
max_attempts: 10
base_delay: 5s
max_delay: 5s
jitter: 0
