crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_retry_config_exponential.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: config
---
strategy: exponential
max_attempts: 5
base_delay: 2s
max_delay: 2m
jitter: 0.5
