crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_retry_config_immediate.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: config
---
strategy: immediate
max_attempts: 3
base_delay: 100ms
max_delay: 10s
jitter: 0
