crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_retry_config_linear.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: config
---
strategy: linear
max_attempts: 4
base_delay: 500ms
max_delay: 30s
jitter: 0.25
